{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 20,
  "lineage": "5672d0db-6ab9-19d7-0bed-2f3d157a4dc7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2c2988eec578c2a",
            "domain": "vpc",
            "id": "eipalloc-0d2c2988eec578c2a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-189-172-235.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.172.235",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545758899836:internet-gateway/igw-00aa08fef49966914",
            "id": "igw-00aa08fef49966914",
            "owner_id": "545758899836",
            "vpc_id": "vpc-08144edafc61d67c1"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:545758899836:loadbalancer/app/ALB/06c97e432492da02",
            "arn_suffix": "app/ALB/06c97e432492da02",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-2104528370.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:545758899836:loadbalancer/app/ALB/06c97e432492da02",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f7c6dc1d01711de1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01348b8ff815bb609"
              },
              {
                "subnet_id": "subnet-0a823cfcec70f6ee5"
              }
            ],
            "subnets": [
              "subnet-01348b8ff815bb609",
              "subnet-0a823cfcec70f6ee5"
            ],
            "tags": {
              "Name": "Terraform_ALB"
            },
            "tags_all": {
              "Name": "Terraform_ALB"
            },
            "vpc_id": "vpc-08144edafc61d67c1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.Lb-SG",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.MyVPC",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:545758899836:listener/app/ALB/06c97e432492da02/9e67bd5b43a7792d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:545758899836:targetgroup/TG/1d562c13a5100354",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:545758899836:listener/app/ALB/06c97e432492da02/9e67bd5b43a7792d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:545758899836:loadbalancer/app/ALB/06c97e432492da02",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB",
            "aws_lb_target_group.TG",
            "aws_security_group.Lb-SG",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.MyVPC",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:545758899836:targetgroup/TG/1d562c13a5100354",
            "arn_suffix": "targetgroup/TG/1d562c13a5100354",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:545758899836:targetgroup/TG/1d562c13a5100354",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08144edafc61d67c1"
          },
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2c2988eec578c2a",
            "association_id": "eipassoc-02af68cf6252668b5",
            "connectivity_type": "public",
            "id": "nat-0d3d45c9d4a375f0a",
            "network_interface_id": "eni-0c626aa6f2906a4b2",
            "private_ip": "10.0.1.56",
            "public_ip": "18.189.172.235",
            "subnet_id": "subnet-0a823cfcec70f6ee5",
            "tags": {
              "Name": "NatGW"
            },
            "tags_all": {
              "Name": "NatGW"
            }
          },
          "dependencies": [
            "aws_eip.elasticIP",
            "aws_internet_gateway.IGW",
            "aws_subnet.public",
            "aws_vpc.MyVPC",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545758899836:route-table/rtb-0f9deb4049bea2830",
            "id": "rtb-0f9deb4049bea2830",
            "owner_id": "545758899836",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00aa08fef49966914",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps_main"
            },
            "tags_all": {
              "Name": "DevOps_main"
            },
            "timeouts": null,
            "vpc_id": "vpc-08144edafc61d67c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "M",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d8244bf41e093b8",
            "route_table_id": "rtb-0f9deb4049bea2830",
            "subnet_id": "subnet-0a823cfcec70f6ee5"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.main",
            "aws_subnet.public",
            "aws_vpc.MyVPC",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "M1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2c14499c750c317",
            "route_table_id": "rtb-0f9deb4049bea2830",
            "subnet_id": "subnet-01348b8ff815bb609"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.main",
            "aws_subnet.public2",
            "aws_vpc.MyVPC",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lb-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545758899836:security-group/sg-0f7c6dc1d01711de1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7c6dc1d01711de1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "traffic from internet to LB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LoadBalancerSecurityGRP",
            "name_prefix": "",
            "owner_id": "545758899836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08144edafc61d67c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecsSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545758899836:security-group/sg-011fcd0db60317d54",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011fcd0db60317d54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ECS_SG",
            "name_prefix": "",
            "owner_id": "545758899836",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08144edafc61d67c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545758899836:subnet/subnet-0ca242109a9fdff0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca242109a9fdff0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "545758899836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08144edafc61d67c1"
          },
          "dependencies": [
            "aws_vpc.MyVPC",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545758899836:subnet/subnet-09e2b5bc5643cdec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e2b5bc5643cdec7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "545758899836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08144edafc61d67c1"
          },
          "dependencies": [
            "aws_vpc.MyVPC",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545758899836:subnet/subnet-0a823cfcec70f6ee5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a823cfcec70f6ee5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545758899836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public1"
            },
            "tags_all": {
              "Name": "Public1"
            },
            "vpc_id": "vpc-08144edafc61d67c1"
          },
          "dependencies": [
            "aws_vpc.MyVPC",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545758899836:subnet/subnet-01348b8ff815bb609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01348b8ff815bb609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "545758899836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public2"
            },
            "tags_all": {
              "Name": "Public2"
            },
            "vpc_id": "vpc-08144edafc61d67c1"
          },
          "dependencies": [
            "aws_vpc.MyVPC",
            "data.aws_availability_zones.AZ"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:545758899836:vpc/vpc-08144edafc61d67c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09efad162fef55381",
            "default_route_table_id": "rtb-04373bb235db5ce4c",
            "default_security_group_id": "sg-06ef98aa66306f738",
            "dhcp_options_id": "dopt-06ca20ba25d6387e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08144edafc61d67c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04373bb235db5ce4c",
            "owner_id": "545758899836",
            "tags": {
              "Name": "Devops_VPC"
            },
            "tags_all": {
              "Name": "Devops_VPC"
            }
          }
        }
      ]
    }
  ]
}